# webdav_ss

./: .gitignore  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  docker-compose.yml  flake.nix  litmus.nix  litmus.patch  module.nix  nginx.conf  nixosTests.nix  tests.nix  vm.nix  webdav_ss.yml
.github/workflows/: build.yml  rust.yml
rust-s3/s3/: Cargo.toml
rust-s3/s3/src/: bucket.rs  command.rs  request.rs  serde_types.rs  signing.rs
server/: Cargo.toml
server/src/: aggregate.rs  configuration.rs
server/src/application/: mod.rs
server/src/backend/: encryption.rs  normalized_path.rs
server/src/backend/prop_storages/: kv.rs  mem.rs  mod.rs  stub.rs  yaml.rs
server/src/backend/s3_backend/: entries.rs  filesystem.rs  metadata.rs  partial_open_file.rs  simple_open_file.rs
server/tests/: s3_backend_test.rs
src/: aggregate.rs  configuration.rs  lib.rs  main.rs  repository.rs
src/application/: mod.rs  tls.rs
src/backend/: mod.rs  normalized_path.rs  s3.rs  s3_backend.rs
src/backend/prop_storages/: mem.rs  mod.rs  yaml.rs
src/backend/s3_backend/: entries.rs  filesystem.rs  metadata.rs  mod.rs  normalized_path.rs  partial_open_file.rs  simple_open_file.rs
ssc/: generate_certs.sh  server_cert_ext.cnf
tests/: s3_backend_test.rs
