[package]
name = "webdav_ss"
version = "0.1.0"
edition = "2018"

[dependencies]
webdav-handler = "0.2.0"
hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "http1", "stream", "client"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
anyhow = "1"
percent-encoding = "2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
config = { version = "0.11", default-features = false, features = ["yaml"] }
serde = { version = "1", features = [ "derive" ] }
clap = "2.33"
rust-s3 = { git = "https://github.com/khooj/rust-s3", rev = "0e733fcb9517c1fb4c76b785542750efbe7c4308", features = ["rustls-tls", "no-verify-ssl"] }
bytes = "1.1"
derivative = "2.2.0"
tokio-util = { version = "0.6", features = ["io"] }
futures-core = "0.3"
tokio-stream = "0.1"
rusty-s3 = { version = "0.1.2" }

[dev-dependencies]
testcontainers = "0.12"