[package]
name = "webdav_ss"
version = "0.1.0"
edition = "2018"

[dependencies]
webdav-handler = "0.2.0"
hyper = { version = "0.14", default-features = false, features = ["server", "tcp", "http1", "stream", "client"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
anyhow = "1"
percent-encoding = "2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-log = "0.1"
config = { version = "0.11", default-features = false, features = ["yaml"] }
serde = { version = "1", features = [ "derive" ] }
clap = "2.33"
rust-s3 = { git = "https://github.com/khooj/rust-s3", rev = "db556125607842b223e68750854f0b0d39d9941f", features = ["rustls-tls", "no-verify-ssl"] }
#rust-s3 = { path = "../rust-s3/s3", features = [ "rustls-tls", "no-verify-ssl" ] }
bytes = "1.1"
derivative = "2.2.0"
tokio-util = { version = "0.6", features = ["io"] }
futures-core = "0.3"
tokio-stream = "0.1"
bincode = "1.3"
base64 = "0.13"
async-stream = { version = "0.3" }
serde_yaml = "0.8"
chrono = "0.4"

[dev-dependencies]
testcontainers = "0.12"

[features]
integration = []